# domino-app

./: .gitignore  Caddyfile  Cargo.toml  Dockerfile  LICENSE  README.md  Rocket.toml  build.js  build.ps1  docker-compose.yml  package-lock.json  run.js
api/: Cargo.toml
api/src/: api.rs  error.rs  lib.rs  pool.rs
backend/: Cargo.toml  Dockerfile  domino.db
backend/api/: Cargo.toml
backend/api/src/: api.rs  error.rs  lib.rs
backend/db/: domino.sqlite
backend/domino_lib/src/: lib.rs  main.rs
backend/domino_lib/src/domino_types/: puzzle.rs  solution.rs  tile.rs
backend/domino_lib/src/graph_models/: generate_puzzle.rs
backend/domino_lib/src/graph_models/solve_puzzle/: mod.rs
backend/domino_lib/src/lp_models/: mod.rs
backend/domino_lib/src/lp_models/generate_sequence_model/: mod.rs
backend/domino_lib/src/lp_models/model_execution_lib/: adapter.rs
backend/domino_lib/src/model_execution_lib/: adapter.rs
backend/dto/src/: dto.rs
backend/entity/src/: collection.rs  lib.rs  mod.rs  puzzle.rs  sequence.rs
backend/grpc-server/: Cargo.toml  build.rs
backend/grpc-server/proto/: domino.proto
backend/grpc-server/src/: main.rs  utils.rs
backend/grpc-server/src/db/: mod.rs  query.rs
backend/migration/: Cargo.toml
backend/migration/src/: m20241202_000002_create_tile_placement_table.rs  m20241202_000003_create_collection_table.rs  m20241202_000004_create_sequence_table.rs  m20241202_000005_create_puzzle_table.rs
backend/service/: Cargo.toml
backend/service/src/: mutation.rs  query.rs
backend/src/: main.rs
backend/src/db/: mod.rs  query.rs
backend/src/endpoints/: mod.rs  performance.rs
db/: domino.sqlite
docs/: schema.puml
domino_lib/: Cargo.toml
domino_lib/src/: lib.rs
domino_lib/src/lp_models/classify_puzzle_model/: mod.rs
domino_lib/src/lp_models/model_execution_lib/: mod.rs
(+100 files in other folders)
