[package]
name = "api"
version = "0.1.0"
authors = ["Nunzio Onorati <nunzioonorati@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
async-stream = { version = "0.3" }
async-trait = { version = "0.1" }
service = { path = "../service" }
futures = { version = "0.3" }
futures-util = { version = "0.3" }
rocket = { version = "0.5.0", features = ["json"] }
rocket_cors = "0.6.0"
rocket_okapi = { version = "0.8.0", features = ["swagger", "rapidoc", "rocket_db_pools"] }
serde_json = { version = "1" }
entity = { path = "../entity" }
migration = { path = "../migration" }
tokio = "1.20.0"
serde = "1.0"
dto = { path = "../dto" }
sea-orm-rocket = "0.5"
