[package]
name = "domino-rs"
version = "0.1.0"
authors = ["Nunzio Onorati <nunzioonorati@gmail.com>"]
edition = "2021"
publish = false

[workspace]
members = [
  ".",
  "api",
  "service",
  "entity",
  "migration",
  "dto"
]
resolver = "2"

[dependencies]
api = { path = "./api" }
domino-lib = { version = "0.1.1" }