[package]
name = "domino_lib"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
rand = "0.8.5"
anyhow = "1.0.92"
itertools = "0.13.0"
highs-sys = { version = "1.5.0", features = ["discover"] }
highs = { version = "1.5.0" }
good_lp = { version = "1.9.0", default-features = false, features = ["highs"]}

[dev-dependencies]
