[package]
name = "grpc-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.11"
tokio = { version = "1", features = ["full"] }
tonic-reflection = "0.11"
prost = "0.12.3"
tonic-web = "0.11"
tower-http = "0.4"
domino-lib = "0.2.2"
sqlite = "0.36.0"

[build-dependencies]
tonic-build = "0.11"
